--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 ﻿<!DOCTYPE html>
 <html lang="en" data-theme="dark">
-
+<link href="styles.css" rel="stylesheet"/>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>float3.github.io</title>
-    <link rel="stylesheet" href="/styles.css" media="screen" type="text/css">
+    <link rel="stylesheet" href="styles.css" media="screen" type="text/css">
 </head>
 
-<body>
+<body style="font-family: 'Garamond Classico SC Regular'">
 <div class="container content">
     <header class="masthead">
         <h3 class="masthead-title">
