--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en">
 <link href="styles.css" rel="stylesheet"/>
 <head>
     <meta charset="UTF-8">
@@ -27,7 +27,7 @@
             </ul>
             <h1 id="last-project">Last Project</h1>
             <ul>
-                <li><a href="https://github.com/float3/BritishMuseum3DScans">British Museum 3D Scans</a></li>
+                <li><a href="https://github.com/float3/BritishMuseum3DScans">British Museum 3D Scans</a> (we do a little stealing)</li>
             </ul>
             <h1 id="noteworthy-projects">Noteworthy projects</h1>
             <ul>
