--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css" media="screen" type="text/css">
 </head>
 
-<body style="font-family: 'Garamond Classico SC Regular'">
+<body>
 <div class="container content">
     <header class="masthead">
         <h3 class="masthead-title">
@@ -35,7 +35,7 @@
                 <li><a href="https://github.com/float3/BakeCurvature">BakeCurvature</a></li>
                 <li><a href="https://github.com/float3/3lang">3lang</a></li>
                 <li><a href="https://github.com/float3/3s-Unity-Stuff">Unity-Shaders/Tools</a></li>
-                <li><a href="https://github.com/float3/ShaderArchive">Shaders</a></li>
+                <li><a href="https://github.com/float3/ShaderArchive">More Unity Shaders</a></li>
                 <li><a href="https://github.com/float3/Freckles">Voronoi Texture Generator</a></li>
                 <li><a href="https://github.com/float3/PSDTranslate">PSDTranslate</a> and <a
                         href="https://github.com/float3/psd_translate">psd_translate</a></li>
