add gamer moment

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                 <li><a href="https://github.com/lyuma/Av3Emulator">Av3Emulator</a></li>
                 <li><a href="https://github.com/d4rkc0d3r/d4rkAvatarOptimizer">d4rkAvatarOptimizer</a></li>
             </ul>
+            <h1 id="gamer-moment">Gamer moment</h1>
+                <video controls width="500">
+                    <source src="3BEATSSIRALOONEDAMAGELESS.webm" type="video/webm">
+                    Download the <a href="3BEATSSIRALOONEDAMAGELESS.webm">WEBM</a>
+                </video>
         </article>
     </main>
 </div>
