--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                         href="https://github.com/float3/psd_translate">psd_translate</a></li>
                 <li><a href="https://gist.github.com/float3">gists</a></li>
             </ul>
-            <h1 id="contributed-to">Contributed to</h1>
+            <h1 id="notable-contributions">Notable Contributions</h1>
             <ul>
                 <li><a href="https://github.com/llealloo/vrc-udon-audio-link">AudioLink</a></li>
-                <li><a href="https://www.poiyomi.com">Poiyomi</a></li>
+                <li><a href="https://www.poiyomi.com">Poiyomi Toon Shader</a></li>
                 <li><a href="https://github.com/MochiesCode/Mochies-Unity-Shaders">Mochies Unity Shaders</a></li>
                 <li><a href="https://gitlab.com/xMorioh/moriohs-toon-shader">Moriohs Toon Shader</a></li>
                 <li><a href="https://github.com/rurre/PumkinsAvatarTools">PumkinsAvatarTools</a></li>
