add manga scraper to latest projects

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
                 <li>Discord: hill#0003</li>
                 <li>Shadertoy: <a href="https://www.shadertoy.com/user/Three">Three</a></li>
             </ul>
-            <h1 id="last-project">Last Project</h1>
+            <h1 id="latest-projects">Latest Projects</h1>
             <ul>
-                <li><a href="https://github.com/float3/BritishMuseum3DScans">British Museum 3D Scans</a> (we do a little stealing)</li>
+                <li><a href="https://github.com/float3/PantyhoseScenesEndorsed">Manga Scraper</a></li>
+                <li><a href="https://github.com/float3/BritishMuseum3DScans">British Museum 3D Scans</a></li>
             </ul>
             <h1 id="noteworthy-projects">Noteworthy projects</h1>
             <ul>
