--- a/index.html
+++ b/index.html
@@ -1,57 +1,115 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<link href="styles.css" rel="stylesheet"/>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="styles.css" rel="stylesheet" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>float3.github.io</title>
-    <link rel="stylesheet" href="styles.css" media="screen" type="text/css">
-</head>
+    <link rel="stylesheet" href="./styles.css" media="screen" type="text/css" />
+  </head>
 
-<body>
-<div class="container content">
-    <header class="masthead">
+  <body>
+    <div class="container content">
+      <header class="masthead">
         <h3 class="masthead-title">
-            <a title="Home">float3.github.io</a>
+          <a title="Home">float3.github.io</a>
         </h3>
-    </header>
-    <main>
+      </header>
+      <main>
         <article class="page">
-            <h1 id="socials">Socials</h1>
-            <ul>
-                <li>GitHub: <a href="https://github.com/float3">float3</a></li>
-                <li>GitLab: <a href="https://gitlab.com/float3">float3</a></li>
-                <li>Shadertoy: <a href="https://www.shadertoy.com/user/Three">Three</a></li>
-            </ul>
-            <h1 id="latest-projects">Latest Projects</h1>
-            <ul>
-                <li><a href="https://github.com/float3/PantyhoseScenesEndorsed">Manga Scraper</a></li>
-                <li><a href="https://github.com/float3/BritishMuseum3DScans">British Museum 3D Scans</a></li>
-            </ul>
-            <h1 id="noteworthy-projects">Noteworthy projects</h1>
-            <ul>
-                <li><a href="https://github.com/float3/GoogleTranslate.NET">GoogleTranslate.NET</a></li>
-                <li><a href="https://github.com/float3/BakeCurvature">BakeCurvature</a></li>
-                <li><a href="https://github.com/float3/3lang">3lang</a></li>
-                <li><a href="https://github.com/float3/3s-Unity-Stuff">Unity-Shaders/Tools</a></li>
-                <li><a href="https://github.com/float3/ShaderArchive">More Unity Shaders</a></li>
-                <li><a href="https://github.com/float3/Freckles">Voronoi Texture Generator</a></li>
-                <li><a href="https://github.com/float3/PSDTranslate">PSDTranslate</a> and <a
-                        href="https://github.com/float3/psd_translate">psd_translate</a></li>
-                <li><a href="https://gist.github.com/float3">gists</a></li>
-            </ul>
-            <h1 id="notable-contributions">Notable Contributions</h1>
-            <ul>
-                <li><a href="https://github.com/llealloo/vrc-udon-audio-link">AudioLink</a></li>
-                <li><a href="https://www.poiyomi.com">Poiyomi Toon Shader</a></li>
-                <li><a href="https://github.com/MochiesCode/Mochies-Unity-Shaders">Mochies Unity Shaders</a></li>
-                <li><a href="https://gitlab.com/xMorioh/moriohs-toon-shader">Moriohs Toon Shader</a></li>
-                <li><a href="https://github.com/rurre/PumkinsAvatarTools">PumkinsAvatarTools</a></li>
-                <li><a href="https://github.com/lyuma/Av3Emulator">Av3Emulator</a></li>
-                <li><a href="https://github.com/d4rkc0d3r/d4rkAvatarOptimizer">d4rkAvatarOptimizer</a></li>
-            </ul>
+          <h1 id="socials">Socials</h1>
+          <ul>
+            <li>GitHub: <a href="https://github.com/float3">float3</a></li>
+            <li>GitLab: <a href="https://gitlab.com/float3">float3</a></li>
+            <li>
+              Shadertoy:
+              <a href="https://www.shadertoy.com/user/Three">Three</a>
+            </li>
+          </ul>
+          <h1 id="latest-projects">Latest Projects</h1>
+          <ul>
+            <li>
+              <a href="https://github.com/float3/PantyhoseScenesEndorsed"
+                >Manga Scraper</a
+              >
+            </li>
+            <li>
+              <a href="https://github.com/float3/BritishMuseum3DScans"
+                >British Museum 3D Scans</a
+              >
+            </li>
+          </ul>
+          <h1 id="noteworthy-projects">Noteworthy projects</h1>
+          <ul>
+            <li>
+              <a href="https://github.com/float3/GoogleTranslate.NET"
+                >GoogleTranslate.NET</a
+              >
+            </li>
+            <li>
+              <a href="https://github.com/float3/BakeCurvature"
+                >BakeCurvature</a
+              >
+            </li>
+            <li><a href="https://github.com/float3/3lang">3lang</a></li>
+            <li>
+              <a href="https://github.com/float3/3s-Unity-Stuff"
+                >Unity-Shaders/Tools</a
+              >
+            </li>
+            <li>
+              <a href="https://github.com/float3/ShaderArchive"
+                >More Unity Shaders</a
+              >
+            </li>
+            <li>
+              <a href="https://github.com/float3/Freckles"
+                >Voronoi Texture Generator</a
+              >
+            </li>
+            <li>
+              <a href="https://github.com/float3/PSDTranslate">PSDTranslate</a>
+              and
+              <a href="https://github.com/float3/psd_translate"
+                >psd_translate</a
+              >
+            </li>
+            <li><a href="https://gist.github.com/float3">gists</a></li>
+          </ul>
+          <h1 id="notable-contributions">Notable Contributions</h1>
+          <ul>
+            <li>
+              <a href="https://github.com/llealloo/vrc-udon-audio-link"
+                >AudioLink</a
+              >
+            </li>
+            <li><a href="https://www.poiyomi.com">Poiyomi Toon Shader</a></li>
+            <li>
+              <a href="https://github.com/MochiesCode/Mochies-Unity-Shaders"
+                >Mochies Unity Shaders</a
+              >
+            </li>
+            <li>
+              <a href="https://gitlab.com/xMorioh/moriohs-toon-shader"
+                >Moriohs Toon Shader</a
+              >
+            </li>
+            <li>
+              <a href="https://github.com/rurre/PumkinsAvatarTools"
+                >PumkinsAvatarTools</a
+              >
+            </li>
+            <li>
+              <a href="https://github.com/lyuma/Av3Emulator">Av3Emulator</a>
+            </li>
+            <li>
+              <a href="https://github.com/d4rkc0d3r/d4rkAvatarOptimizer"
+                >d4rkAvatarOptimizer</a
+              >
+            </li>
+          </ul>
         </article>
-    </main>
-</div>
-</body>
+      </main>
+    </div>
+  </body>
 </html>
